<resources>
    <string name="app_name">YouInvited</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nameFill">Name</string>
    <string name="emailFill">Email</string>
    <string name="addressFill">Address</string>
    <string name="phoneFill">Phone</string>
    <string name="adminSelect">Admin account</string>
    <string name="nameHint">Your name here!</string>
    <string name="emailHint">example@mail.com</string>
    <string name="addressHint">street #, city</string>
    <string name="phoneHint">888-888-88-88</string>
    <string name="afirmative">Yes</string>
    <string name="negative">No</string>
    <!--    Login-->
    <string name="welcome_message">Welcome!, Log in please</string>
    <string name="nameEvent">YouInvited Fest!</string>
    <string name="btnLogin">Log In</string>
    <string name="btnRegister">Register</string>
    <string name="fillData">Please, fill all the spaces</string>
    <string name="editButton">Edit</string>
    <string name="createEvent">Create event</string>
    <string name="cancelButton">Cancel</string>
    <string name="updateProfileButton">Update profile</string>
    <string name="invitedCount">Invited count</string>
    <string name="eventDate">Event date</string>
    <string name="eventDateHint">Select day</string>
    <string name="saveButton">Save</string>

    <!---->
    <string name="homeFragment">Fragment Home</string>
    <string name="galleryFragment">Fragment Gallery</string>
    <string name="languageFragment">Fragment Language</string>
    <!--    -->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Change laguage</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_scanner">Scanner</string>
    <string name="menu_eventList">Event list</string>
    <string name="createEventFragment">Create an event</string>
    <string name="detailEvent">Event detail</string>

    <string name="select_languaje">Click here to change your language</string>
    <string name="btn_languaje">Change language</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="no_events">You don´t have events yet</string>
    <string name="regresarBtn">Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_show_place_ativity">ShowPlaceAtivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

</resources>