<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/groupItems">

        <item
            android:id="@+id/nav_listEvents"
            android:icon="@drawable/icon_list"
            android:title="@string/menu_eventList" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/usuario"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/showScanFragment"
            android:icon="@drawable/scanner_icon"
            android:title="@string/menu_scanner" />

    </group>
</menu>
