<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_listEvents">

    <fragment
        android:id="@+id/nav_listEvents"
        android:name="com.example.youinvited.ui.eventList.EventListFragment"
        android:label="@string/menu_eventList"
        tools:layout="@layout/event_list_fragment" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.youinvited.ui.changeLanguage.ChangeLanguageFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/ChangeLanguage" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.youinvited.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/profile_fragment" >
        <action
            android:id="@+id/action_nav_profile_to_createEventFragment"
            app:destination="@id/createEventFragment"
            app:popUpTo="@id/nav_profile" />
    </fragment>

    <fragment
        android:id="@+id/createEventFragment"
        android:name="com.example.youinvited.ui.createEvent.CreateEventFragment"
        android:label="@string/menu_eventList"
        tools:layout="@layout/create_event_fragment" />

</navigation>
